--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.6.7",
+    "axios-retry": "^4.5.0",
     "bull": "^4.16.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -65,6 +66,7 @@
     "react-day-picker": "^9.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^6.22.3",
     "react-tooltip": "^5.28.0",
