--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "jsonrepair": "^3.11.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.4",
     "uuid": "^11.0.3",
     "zod": "^3.22.4"
